samples/_failures_safe/1761311367_258e48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b6b2b3d.c: In function ‘main’:
./samples/SAFE/__tmp_5b6b2b3d.c:148:13: error: expected identifier at end of input
  148 |             if (logs[i].
      |             ^~
./samples/SAFE/__tmp_5b6b2b3d.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b6b2b3d.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5b6b2b3d.c:148:13: error: expected declaration or statement at end of input
